test/conformance/chainsaw/policy-validation/cluster-policy/deprecated-operations/policy-invalid-operator.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: test-invalid
spec:
  admission: true
  background: false
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Pod
    name: test-invalid
    validate:
      failureAction: Enforce
      deny:
        conditions:
          any:
          - key:
            - '{{request.object.metadata.labels.app}}'
            operator: Invalid
            value:
            - busybox
            - busybox1
