test/conformance/chainsaw/policy-validation/cluster-policy/deprecated-operations/01-deprecated-operator-assert.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: deprecated-operator-assert
spec:
  steps:
  - name: step-01
    try:
    - script:
        content: |
          if kubectl apply -f policy-deprecated-operator.yaml 2>&1 | grep -q "Warning: Operator NotIn has been deprecated and will be removed soon."
          then
            echo "Test succeeded. Warning was displayed."
            exit 0
          else
            echo "Tested failed. Warning was not displayed."
            exit 1
          fi
